詳細ログ機能追加とサイドバー動作修正

--- a/referral.html
+++ b/referral.html
@@ -411,7 +411,7 @@
     <script src="js/common.js"></script>
     <script src="js/sidebar-toggle.js"></script>
     <script src="js/user-menu.js"></script>
-    <script src="js/referral.js"></script>
+    <script src="js/referral-enhanced.js"></script>
     <script src="js/cashout-modal.js"></script>
     <script>
         // タブ切り替え
