--- a/referral.html
+++ b/referral.html
@@ -21,6 +21,7 @@
     
     <!-- 統合CSS (最後に読み込んで競合を解決) -->
     <link rel="stylesheet" href="css/referral-unified.css">
+    <link rel="stylesheet" href="css/referral-responsive-perfect.css">
 </head>
 <body class="referral-page">
     <!-- Mobile Header -->
@@ -193,7 +194,7 @@
                     </div>
                     <button id="cashout-btn" class="btn btn-primary cashout-button" disabled>
                         <i class="fas fa-money-check-alt"></i>
-                        ポイントを現金化する（最低3,000pt）
+                        ポイントを現金化する（最低5,000pt）
                     </button>
                 </section>
 
@@ -324,8 +325,8 @@
             <form id="cashout-form">
                 <div class="form-group">
                     <label>現金化ポイント数</label>
-                    <input type="number" id="cashout-points" min="3000" step="100" required>
-                    <p class="form-help">最低3,000ポイント、100ポイント単位</p>
+                    <input type="number" id="cashout-points" min="5000" step="100" required>
+                    <p class="form-help">最低5,000ポイント、100ポイント単位</p>
                 </div>
                 
                 <div class="form-group">
