--- a/referral.html
+++ b/referral.html
@@ -24,10 +24,7 @@
     <link rel="stylesheet" href="css/user-menu-zindex-only.css">
     <link rel="stylesheet" href="css/referral.css">
     <link rel="stylesheet" href="css/cashout-modal.css">
-    <link rel="stylesheet" href="css/css-conflict-fix.css">
-    <link rel="stylesheet" href="css/responsive-complete.css">
-    <link rel="stylesheet" href="css/referral-unified.css">
-    <link rel="stylesheet" href="css/referral-responsive-perfect.css">
+    <link rel="stylesheet" href="css/referral-fix-final.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
