紹介ページ完全修正: サイドバー、ボタン、ログアウトUI統一

--- a/referral.html
+++ b/referral.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/user-menu-zindex-only.css">
     <link rel="stylesheet" href="css/referral.css">
     <link rel="stylesheet" href="css/cashout-modal.css">
-    <link rel="stylesheet" href="css/referral-fix-final.css">
+    <link rel="stylesheet" href="css/referral-final-unified.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
