紹介ページ競合完全解決: 不要CSSを削除し最終修正を適用

--- a/referral.html
+++ b/referral.html
@@ -21,10 +21,10 @@
     <link rel="stylesheet" href="css/notifications.css">
     <link rel="stylesheet" href="css/realtime-notifications.css">
     <link rel="stylesheet" href="css/responsive-menu.css">
-    <link rel="stylesheet" href="css/user-menu-zindex-only.css">
     <link rel="stylesheet" href="css/referral.css">
     <link rel="stylesheet" href="css/cashout-modal.css">
-    <link rel="stylesheet" href="css/referral-final-unified.css">
+    <!-- 最終修正CSS - すべての競合を解決 -->
+    <link rel="stylesheet" href="css/referral-ultimate-fix.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
