緊急修正: CSS/JS競合を完全解決、cashout-button問題修正

--- a/referral.html
+++ b/referral.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="css/responsive-menu.css">
     <link rel="stylesheet" href="css/referral.css">
     <link rel="stylesheet" href="css/cashout-modal.css">
-    <!-- 最終修正CSS - すべての競合を解決 -->
-    <link rel="stylesheet" href="css/referral-ultimate-fix.css">
+    <!-- 緊急修正CSS - 全問題解決 -->
+    <link rel="stylesheet" href="css/referral-emergency-fix.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
