セキュリティ修正とuser-menu.js修正

--- a/referral.html
+++ b/referral.html
@@ -441,9 +441,10 @@
     <script src="js/common.js"></script>
     <script src="js/sidebar.js"></script>
     <script src="js/notifications.js"></script>
-    <script src="js/user-menu-dropdown.js"></script>
+    <script src="js/user-menu.js"></script>
     <script src="js/realtime-notifications.js"></script>
     <script src="js/cashout-modal.js"></script>
+    <script src="js/referral-security-fix.js"></script>
     <script src="js/referral-enhanced.js"></script>
     <script>
         // タブ切り替え
