サイドバー全画面表示問題を修正

--- a/referral.html
+++ b/referral.html
@@ -23,11 +23,8 @@
     <link rel="stylesheet" href="css/responsive-menu.css">
     <!-- 紹介ページ専用スタイル -->
     <link rel="stylesheet" href="css/referral-page-specific.css">
-    <!-- CSS競合修正 -->
-    <link rel="stylesheet" href="css/css-conflict-fix.css">
-    <link rel="stylesheet" href="css/responsive-complete.css">
-    <!-- 最終オーバーライド -->
-    <link rel="stylesheet" href="css/referral-complete-override.css">
+    <!-- サイドバー緊急修正 -->
+    <link rel="stylesheet" href="css/referral-sidebar-emergency-fix.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
