サイドバー問題を根本から修正：responsive-menu.cssとdashboard.css修正

--- a/referral.html
+++ b/referral.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="css/responsive-menu.css">
     <!-- 紹介ページ専用スタイル -->
     <link rel="stylesheet" href="css/referral-page-specific.css">
-    <!-- サイドバー緊急修正 -->
-    <link rel="stylesheet" href="css/referral-sidebar-emergency-fix.css">
+    <!-- サイドバー統一スタイル -->
+    <link rel="stylesheet" href="css/sidebar-unified.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
