モバイルメニューボタン修正：sidebar-toggle-fixed.js作成

--- a/referral.html
+++ b/referral.html
@@ -44,6 +44,9 @@
             </a>
         </div>
     </header>
+    
+    <!-- Mobile Backdrop -->
+    <div class="mobile-backdrop"></div>
 
     <!-- Mobile Navigation (ダッシュボードと同じ) -->
     <nav class="mobile-nav">
@@ -454,7 +457,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/supabase-client.js"></script>
     <script src="js/common.js"></script>
-    <script src="js/sidebar.js"></script>
+    <script src="js/sidebar-toggle-fixed.js"></script>
     <script src="js/notifications.js"></script>
     <script src="js/user-menu.js"></script>
     <script src="js/realtime-notifications.js"></script>
