紹介リンク表示問題の完全修正とUI改善

--- a/referral.html
+++ b/referral.html
@@ -39,6 +39,10 @@
     <link rel="stylesheet" href="css/referral-select-ui.css">
     <!-- 紹介リンクセクション プレミアムUI -->
     <link rel="stylesheet" href="css/referral-links-premium.css">
+    <!-- 青系強制オーバーライド -->
+    <link rel="stylesheet" href="css/referral-blue-override.css">
+    <!-- 完璧なリンクUI -->
+    <link rel="stylesheet" href="css/referral-links-perfect-ui.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
@@ -478,10 +482,8 @@
     <script src="js/referral-enhanced.js"></script>
     <script src="js/referral-enhanced-fix.js"></script>
     <script src="js/referral-table-fix.js"></script>
-    <!-- デバッグ用テストスクリプト -->
-    <script src="js/debug-direct-test.js"></script>
-    <script src="js/quick-debug.js"></script>
-    <script src="js/test-display-links.js"></script>
+    <!-- 紹介リンク修正 -->
+    <script src="js/force-correct-userid.js"></script>
     <script>
         // タブ切り替え
         document.querySelectorAll('.tab-button').forEach(button => {
