暗い青背景CSSと面談予約システム要件定義書作成

--- a/referral.html
+++ b/referral.html
@@ -39,8 +39,8 @@
     <link rel="stylesheet" href="css/referral-select-ui.css">
     <!-- 紹介リンクセクション プレミアムUI -->
     <link rel="stylesheet" href="css/referral-links-premium.css">
-    <!-- 青系強制オーバーライド -->
-    <link rel="stylesheet" href="css/referral-blue-override.css">
+    <!-- 暗い青系グラデーション -->
+    <link rel="stylesheet" href="css/referral-darker-blue.css">
     <!-- 完璧なリンクUI -->
     <link rel="stylesheet" href="css/referral-links-perfect-ui.css">
 </head>
