グレーがかった青系スタイルに統一（ダッシュボード・紹介ページ）

--- a/referral.html
+++ b/referral.html
@@ -39,8 +39,8 @@
     <link rel="stylesheet" href="css/referral-select-ui.css">
     <!-- 紹介リンクセクション プレミアムUI -->
     <link rel="stylesheet" href="css/referral-links-premium.css">
-    <!-- 暗い青系グラデーション -->
-    <link rel="stylesheet" href="css/referral-darker-blue.css">
+    <!-- グレーがかった青系スタイル -->
+    <link rel="stylesheet" href="css/grayish-blue-cards.css">
     <!-- 完璧なリンクUI -->
     <link rel="stylesheet" href="css/referral-links-perfect-ui.css">
 </head>
@@ -546,5 +546,6 @@
             window.location.href = `mailto:?subject=INTERCONNECTへの招待&body=${encodeURIComponent(text + '\n\n' + url)}`;
         };
     </script>
+    <script src="js/fix-delete-link.js"></script>
 </body>
 </html>
