バランスの取れた青系テーマ実装（明るさと青さの最適化）

--- a/referral.html
+++ b/referral.html
@@ -39,8 +39,8 @@
     <link rel="stylesheet" href="css/referral-select-ui.css">
     <!-- 紹介リンクセクション プレミアムUI -->
     <link rel="stylesheet" href="css/referral-links-premium.css">
-    <!-- グレーがかった青系スタイル -->
-    <link rel="stylesheet" href="css/grayish-blue-cards.css">
+    <!-- バランスの取れた青系テーマ -->
+    <link rel="stylesheet" href="css/balanced-blue-theme.css">
     <!-- 完璧なリンクUI -->
     <link rel="stylesheet" href="css/referral-links-perfect-ui.css">
 </head>
