--- a/dashboard.html
+++ b/dashboard.html
@@ -33,6 +33,8 @@
     <!-- CSS競合修正 -->
     <link rel="stylesheet" href="css/css-conflict-fix.css">
     <link rel="stylesheet" href="css/responsive-complete.css">
+    <!-- バランスの取れた青系テーマ -->
+    <link rel="stylesheet" href="css/balanced-blue-theme.css">
 </head>
 <body>
     <!-- Mobile Header -->
