TimeRex予約ボタンUI実装完了

--- a/referral.html
+++ b/referral.html
@@ -43,6 +43,8 @@
     <link rel="stylesheet" href="css/balanced-blue-theme.css">
     <!-- 完璧なリンクUI -->
     <link rel="stylesheet" href="css/referral-links-perfect-ui.css">
+    <!-- TimeRex予約ボタンスタイル -->
+    <link rel="stylesheet" href="css/timerex-booking.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
@@ -319,6 +321,25 @@
                         <i class="fas fa-money-check-alt"></i>
                         ポイントを現金化する（最低5,000pt）
                     </button>
+                </section>
+
+                <!-- 面談予約CTA -->
+                <section class="booking-cta-section">
+                    <div class="booking-cta-card">
+                        <div class="booking-cta-content">
+                            <div class="booking-cta-icon">
+                                <i class="fas fa-calendar-check"></i>
+                            </div>
+                            <div class="booking-cta-text">
+                                <h3>まずは自分が体験してみませんか？</h3>
+                                <p>紹介する前に、まずは自分でサービスを体験することで、より説得力のある紹介ができます</p>
+                            </div>
+                            <button id="book-consultation-btn" class="btn btn-primary booking-btn">
+                                <i class="fas fa-video"></i>
+                                無料相談を予約する
+                            </button>
+                        </div>
+                    </div>
                 </section>
 
                 <!-- 紹介の流れ -->
