TimeRex予約ハンドラーJS実装完了（モーダル・通知・カレンダー追加機能付き）

--- a/dashboard.html
+++ b/dashboard.html
@@ -37,6 +37,8 @@
     <link rel="stylesheet" href="css/balanced-blue-theme.css">
     <!-- TimeRex予約ボタンスタイル -->
     <link rel="stylesheet" href="css/timerex-booking.css">
+    <!-- TimeRex予約モーダルスタイル -->
+    <link rel="stylesheet" href="css/timerex-modal.css">
 </head>
 <body>
     <!-- Mobile Header -->
@@ -486,6 +488,8 @@
     
     <!-- グローバル閲覧履歴 -->
     <script src="js/global-viewing-history.js"></script>
+    <!-- TimeRex予約システム -->
+    <script src="js/timerex-booking.js"></script>
     <!-- 通知機能はJSを無効化 -->
     <!-- <script src="js/notifications.js"></script> -->
 </body>
