--- a/referral.html
+++ b/referral.html
@@ -45,6 +45,8 @@
     <link rel="stylesheet" href="css/referral-links-perfect-ui.css">
     <!-- TimeRex予約ボタンスタイル -->
     <link rel="stylesheet" href="css/timerex-booking.css">
+    <!-- TimeRex予約モーダルスタイル -->
+    <link rel="stylesheet" href="css/timerex-modal.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
@@ -334,7 +336,7 @@
                                 <h3>まずは自分が体験してみませんか？</h3>
                                 <p>紹介する前に、まずは自分でサービスを体験することで、より説得力のある紹介ができます</p>
                             </div>
-                            <button id="book-consultation-btn" class="btn btn-primary booking-btn">
+                            <button id="book-referral-btn" class="btn btn-primary booking-btn">
                                 <i class="fas fa-video"></i>
                                 無料相談を予約する
                             </button>
@@ -568,5 +570,7 @@
         };
     </script>
     <script src="js/fix-delete-link.js"></script>
+    <!-- TimeRex予約システム -->
+    <script src="js/timerex-booking.js"></script>
 </body>
 </html>
