index.htmlから遷移する予約ページと完了ページを作成（TimeRex埋め込み対応）

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <a href="#pricing" class="btn btn-primary btn-lg">
                         <i class="fas fa-rocket"></i> 今すぐ始める
                     </a>
-                    <a href="#contact" class="btn btn-outline-light btn-lg">
+                    <a href="book-consultation.html" class="btn btn-outline-light btn-lg">
                         <i class="fas fa-calendar"></i> 無料相談を予約
                     </a>
                 </div>
@@ -617,7 +617,7 @@
                     <div class="cta-icon"><i class="fas fa-phone"></i></div>
                     <h3>無料相談会</h3>
                     <p>あなたの会社の悩みを30分で相談できます。経営の悩み整理シートを無料でプレゼント。</p>
-                    <a href="#" class="cta-button">相談を予約する</a>
+                    <a href="book-consultation.html" class="cta-button">相談を予約する</a>
                 </div>
                 
                 <div class="cta-card">
