z-index優先順位管理CSS作成・全ページ適用（サイドバー最優先）

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <link rel="stylesheet" href="css/typewriter-init.css">
     <!-- 斜め線の強制削除 -->
     <link rel="stylesheet" href="css/hero-slant-fix.css">
+    <!-- z-index優先順位管理 -->
+    <link rel="stylesheet" href="css/z-index-priority.css">
     
     <!-- ヒーローシンプル表示 -->
     <script src="js/hero-simple.js"></script>
