--- a/matching.html
+++ b/matching.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="css/matching-final-styles.css">
     <link rel="stylesheet" href="css/matching-perfect.css">
     <link rel="stylesheet" href="css/matching-loading.css">
+    <!-- z-index優先順位管理 -->
+    <link rel="stylesheet" href="css/z-index-priority.css">
 </head>
 <body>
     <!-- Mobile Header -->
