--- a/dashboard.html
+++ b/dashboard.html
@@ -39,6 +39,8 @@
     <link rel="stylesheet" href="css/timerex-booking.css">
     <!-- TimeRex予約モーダルスタイル -->
     <link rel="stylesheet" href="css/timerex-modal.css">
+    <!-- z-index優先順位管理 -->
+    <link rel="stylesheet" href="css/z-index-priority.css">
 </head>
 <body>
     <!-- Mobile Header -->
