--- a/events.html
+++ b/events.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="css/realtime-notifications.css">
     <link rel="stylesheet" href="css/responsive-menu.css">
     <link rel="stylesheet" href="css/user-menu-zindex-only.css">
+    <!-- z-index優先順位管理 -->
+    <link rel="stylesheet" href="css/z-index-priority.css">
 </head>
 <body>
     <!-- Mobile Header -->
