--- a/messages.html
+++ b/messages.html
@@ -25,6 +25,8 @@
     <!-- ユーザードロップダウン最前面修正 -->
     <link rel="stylesheet" href="css/user-dropdown-fix-final.css">
     <link rel="stylesheet" href="css/info-card-contrast-fix.css">
+    <!-- z-index優先順位管理 -->
+    <link rel="stylesheet" href="css/z-index-priority.css">
 </head>
 <body>
     <!-- Mobile Header -->
