--- a/profile.html
+++ b/profile.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="css/user-menu-zindex-only.css">
     <!-- ユーザードロップダウン最前面修正 -->
     <link rel="stylesheet" href="css/user-dropdown-fix-final.css">
+    <!-- z-index優先順位管理 -->
+    <link rel="stylesheet" href="css/z-index-priority.css">
 </head>
 <body>
     <!-- Mobile Header -->
