--- a/referral.html
+++ b/referral.html
@@ -47,6 +47,8 @@
     <link rel="stylesheet" href="css/timerex-booking.css">
     <!-- TimeRex予約モーダルスタイル -->
     <link rel="stylesheet" href="css/timerex-modal.css">
+    <!-- z-index優先順位管理 -->
+    <link rel="stylesheet" href="css/z-index-priority.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
