fix: Supabaseクライアント未定義エラーとイベントテーブルクエリ修正、リンクアイコンの美化
- supabase-init-wait.js追加でクライアント初期化待機を実装
- dashboard-event-fix.jsで動的にカラム名を判定（event_date/start_date/date）
- referral.htmlの予約CTAセクションを削除
- リンクアイコンに白とグラデーションのスタイルを適用
- 空の状態のアイコンにパルスアニメーション追加

--- a/dashboard.html
+++ b/dashboard.html
@@ -439,12 +439,14 @@
     <script src="js/safe-dom-utils.js"></script>
     <script src="js/safe-storage.js"></script>
     <script src="js/supabase-client.js"></script>
+    <script src="js/supabase-init-wait.js"></script>
     <script src="js/global-functions.js"></script>
     <script src="js/profile-sync.js"></script>
     <script src="js/realtime-notifications.js"></script>
     
     <!-- Dashboard bundle (統合版) -->
     <script src="js/dashboard-bundle.js"></script>
+    <script src="js/dashboard-event-fix.js"></script>
     
     <!-- Dashboard stats initializer (読み込み中表示) -->
     <script src="js/dashboard-stats-initializer.js"></script>
