--- a/referral.html
+++ b/referral.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="css/sidebar-unified.css">
     <!-- ヘッダー修正 -->
     <link rel="stylesheet" href="css/referral-header-fix.css">
+    <!-- アイコンスタイル -->
+    <link rel="stylesheet" href="css/referral-icon-style.css">
     <!-- モーダルスタイル -->
     <link rel="stylesheet" href="css/referral-modal-styles.css">
     <!-- サイドバー完全修正 -->
@@ -327,24 +329,6 @@
                     </button>
                 </section>
 
-                <!-- 面談予約CTA -->
-                <section class="booking-cta-section">
-                    <div class="booking-cta-card">
-                        <div class="booking-cta-content">
-                            <div class="booking-cta-icon">
-                                <i class="fas fa-calendar-check"></i>
-                            </div>
-                            <div class="booking-cta-text">
-                                <h3>まずは自分が体験してみませんか？</h3>
-                                <p>紹介する前に、まずは自分でサービスを体験することで、より説得力のある紹介ができます</p>
-                            </div>
-                            <button id="book-referral-btn" class="btn btn-primary booking-btn">
-                                <i class="fas fa-video"></i>
-                                無料相談を予約する
-                            </button>
-                        </div>
-                    </div>
-                </section>
 
                 <!-- 紹介の流れ -->
                 <section class="referral-steps card">
@@ -497,6 +481,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/supabase-client.js"></script>
+    <script src="js/supabase-init-wait.js"></script>
     <script src="js/common.js"></script>
     <script src="js/sidebar-toggle-fixed.js"></script>
     <script src="js/notifications.js"></script>
