面談予約CTAを面談必須説明に変更 - マッチング機能利用には面談が必要である旨を明記

--- a/dashboard.html
+++ b/dashboard.html
@@ -297,15 +297,15 @@
                 <div class="booking-cta-card">
                     <div class="booking-cta-content">
                         <div class="booking-cta-icon">
-                            <i class="fas fa-calendar-check"></i>
+                            <i class="fas fa-exclamation-triangle"></i>
                         </div>
                         <div class="booking-cta-text">
-                            <h3>無料相談を予約する</h3>
-                            <p>ビジネスの課題や目標について、専門家と1対1で相談できます</p>
+                            <h3>無料面談をご利用ください</h3>
+                            <p>面談を行っていないと適切なマッチングができません。全機能を十分にご利用いただくため、まだ面談がお済みでない方は無料面談をお申し込みください。</p>
                         </div>
                         <button id="book-consultation-btn" class="btn btn-primary booking-btn">
                             <i class="fas fa-video"></i>
-                            30分の無料相談を予約
+                            無料面談を予約する
                         </button>
                     </div>
                 </div>
