CSS競合解消 - 紹介セクションのスタイル重複を修正、balanced-blue-theme.cssをコメントアウト

--- a/referral.html
+++ b/referral.html
@@ -43,8 +43,8 @@
     <link rel="stylesheet" href="css/referral-select-ui.css">
     <!-- 紹介リンクセクション プレミアムUI -->
     <link rel="stylesheet" href="css/referral-links-premium.css">
-    <!-- バランスの取れた青系テーマ -->
-    <link rel="stylesheet" href="css/balanced-blue-theme.css">
+    <!-- バランスの取れた青系テーマ（コメントアウト - referral-links-premium.cssと競合） -->
+    <!-- <link rel="stylesheet" href="css/balanced-blue-theme.css"> -->
     <!-- 完璧なリンクUI -->
     <link rel="stylesheet" href="css/referral-links-perfect-ui.css">
     <!-- TimeRex予約ボタンスタイル -->
@@ -53,6 +53,8 @@
     <link rel="stylesheet" href="css/timerex-modal.css">
     <!-- z-index優先順位管理 -->
     <link rel="stylesheet" href="css/z-index-priority.css">
+    <!-- CSS競合解消（最後に読み込む） -->
+    <link rel="stylesheet" href="css/referral-css-cleanup.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
