--- a/dashboard.html
+++ b/dashboard.html
@@ -483,8 +483,8 @@
     
     <!-- Features -->
     <script src="js/responsive-menu-simple.js"></script>
-    <script src="js/activity-event-filter.js"></script>
-    <script src="js/activity-event-filter-fix.js"></script>
+    <script src="js/activity-event-filter.js?v=2.0"></script>
+    <script src="js/activity-event-filter-fix.js?v=2.0"></script>
     <script src="js/dashboard-charts.js"></script>
     <script src="js/dashboard.js"></script>
     <script src="js/notification-sender.js"></script>
@@ -493,7 +493,7 @@
     <!-- グローバル閲覧履歴 -->
     <script src="js/global-viewing-history.js"></script>
     <!-- TimeRex予約システム -->
-    <script src="js/timerex-booking.js"></script>
+    <script src="js/timerex-booking.js?v=2.0"></script>
     <!-- 通知機能はJSを無効化 -->
     <!-- <script src="js/notifications.js"></script> -->
 </body>
