--- a/referral.html
+++ b/referral.html
@@ -566,6 +566,6 @@ AIを活用した次世代のビジネスマッチングサービスで、経営
     </script>
     <script src="js/fix-delete-link.js"></script>
     <!-- TimeRex予約システム -->
-    <script src="js/timerex-booking.js"></script>
+    <script src="js/timerex-booking.js?v=2.0"></script>
 </body>
 </html>
