紹介ページUI改善 - PC画面用余白追加、紹介リンクセクション背景を薄い色に変更

--- a/referral.html
+++ b/referral.html
@@ -55,6 +55,8 @@
     <link rel="stylesheet" href="css/z-index-priority.css">
     <!-- CSS競合解消（最後に読み込む） -->
     <link rel="stylesheet" href="css/referral-css-cleanup.css">
+    <!-- PC画面用余白調整 -->
+    <link rel="stylesheet" href="css/referral-pc-padding.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
