TimeRex URL長さ問題修正 - 予約ボタンが正常に動作するようシンプルなURLに変更

--- a/dashboard.html
+++ b/dashboard.html
@@ -493,7 +493,7 @@
     <!-- グローバル閲覧履歴 -->
     <script src="js/global-viewing-history.js"></script>
     <!-- TimeRex予約システム -->
-    <script src="js/timerex-booking.js?v=2.0"></script>
+    <script src="js/timerex-booking-fix.js?v=3.0"></script>
     <!-- 通知機能はJSを無効化 -->
     <!-- <script src="js/notifications.js"></script> -->
 </body>
