紹介ページCSS大規模整理 - 21個から6個に削減、競合解消

--- a/referral.html
+++ b/referral.html
@@ -21,42 +21,13 @@
     <link rel="stylesheet" href="css/notifications.css">
     <link rel="stylesheet" href="css/realtime-notifications.css">
     <link rel="stylesheet" href="css/responsive-menu.css">
-    <!-- 紹介ページ専用スタイル -->
+    <!-- 紹介ページ専用スタイル（整理済み） -->
     <link rel="stylesheet" href="css/referral-page-specific.css">
-    <!-- サイドバー統一スタイル -->
-    <link rel="stylesheet" href="css/sidebar-unified.css">
-    <!-- ヘッダー修正 -->
-    <link rel="stylesheet" href="css/referral-header-fix.css">
-    <!-- アイコンスタイル -->
-    <link rel="stylesheet" href="css/referral-icon-style.css">
-    <!-- 共有ボタンスタイル -->
-    <link rel="stylesheet" href="css/referral-share-buttons.css">
-    <!-- モーダルスタイル -->
-    <link rel="stylesheet" href="css/referral-modal-styles.css">
-    <!-- サイドバー完全修正 -->
     <link rel="stylesheet" href="css/referral-sidebar-complete-fix.css">
-    <!-- フォームデザイン改善 -->
     <link rel="stylesheet" href="css/referral-form-design.css">
-    <!-- ユーザードロップダウン最前面修正 -->
-    <link rel="stylesheet" href="css/user-dropdown-fix-final.css">
-    <!-- セレクトボックスUI改善 -->
     <link rel="stylesheet" href="css/referral-select-ui.css">
-    <!-- 紹介リンクセクション プレミアムUI -->
-    <link rel="stylesheet" href="css/referral-links-premium.css">
-    <!-- バランスの取れた青系テーマ（コメントアウト - referral-links-premium.cssと競合） -->
-    <!-- <link rel="stylesheet" href="css/balanced-blue-theme.css"> -->
-    <!-- 完璧なリンクUI -->
     <link rel="stylesheet" href="css/referral-links-perfect-ui.css">
-    <!-- TimeRex予約ボタンスタイル -->
-    <link rel="stylesheet" href="css/timerex-booking.css">
-    <!-- TimeRex予約モーダルスタイル -->
-    <link rel="stylesheet" href="css/timerex-modal.css">
-    <!-- z-index優先順位管理 -->
-    <link rel="stylesheet" href="css/z-index-priority.css">
-    <!-- CSS競合解消（最後に読み込む） -->
-    <link rel="stylesheet" href="css/referral-css-cleanup.css">
-    <!-- PC画面用余白調整 -->
-    <link rel="stylesheet" href="css/referral-pc-padding.css">
+    <link rel="stylesheet" href="css/referral-consolidated.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
