TimeRexアクセス不可問題の代替案実装 - Google Calendar/Calendly統合追加

--- a/dashboard.html
+++ b/dashboard.html
@@ -493,7 +493,8 @@
     <!-- グローバル閲覧履歴 -->
     <script src="js/global-viewing-history.js"></script>
     <!-- TimeRex予約システム -->
-    <script src="js/timerex-booking-fix.js?v=3.0"></script>
+    <!-- TimeRexサイトアクセス不可のため一時的にGoogle Calendar使用 -->
+    <script src="js/google-calendar-booking.js?v=1.0"></script>
     <!-- 通知機能はJSを無効化 -->
     <!-- <script src="js/notifications.js"></script> -->
 </body>
