--- a/referral.html
+++ b/referral.html
@@ -539,6 +539,7 @@ AIを活用した次世代のビジネスマッチングサービスで、経営
     </script>
     <script src="js/fix-delete-link.js"></script>
     <!-- TimeRex予約システム -->
-    <script src="js/timerex-booking-fix.js?v=3.0"></script>
+    <!-- TimeRexサイトアクセス不可のため一時的にGoogle Calendar使用 -->
+    <script src="js/google-calendar-booking.js?v=1.0"></script>
 </body>
 </html>
