換金モーダルと共有ボタンのサイズ・CSS問題修正 - モバイル対応改善

--- a/referral.html
+++ b/referral.html
@@ -437,16 +437,16 @@
             </div>
             <div class="share-options">
                 <button class="share-button twitter" onclick="shareToTwitter()">
-                    <i class="fab fa-twitter"></i> Twitter
+                    <i class="fab fa-twitter"></i><span>Twitter</span>
                 </button>
                 <button class="share-button line" onclick="shareToLine()">
-                    <i class="fab fa-line"></i> LINE
+                    <i class="fab fa-line"></i><span>LINE</span>
                 </button>
                 <button class="share-button facebook" onclick="shareToFacebook()">
-                    <i class="fab fa-facebook"></i> Facebook
+                    <i class="fab fa-facebook"></i><span>Facebook</span>
                 </button>
                 <button class="share-button email" onclick="shareByEmail()">
-                    <i class="fas fa-envelope"></i> メール
+                    <i class="fas fa-envelope"></i><span>メール</span>
                 </button>
             </div>
             <div class="share-text">
