紹介ページPC画面の余白問題を完全修正
- referral-consolidated.cssで基本的な余白設定を強化
- referral-pc-layout-fix.cssを新規作成して確実に余白を適用
- 画面サイズ別の最適化（1024px、1440px、1920px対応）
- キャッシュ対策でCSSバージョニング追加

--- a/dashboard.html
+++ b/dashboard.html
@@ -497,5 +497,17 @@
     <script src="js/google-calendar-booking.js?v=1.0"></script>
     <!-- 通知機能はJSを無効化 -->
     <!-- <script src="js/notifications.js"></script> -->
+    
+    <!-- 面談予約ボタンのリダイレクト -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const bookingBtn = document.getElementById('book-consultation-btn');
+            if (bookingBtn) {
+                bookingBtn.addEventListener('click', function() {
+                    window.location.href = '/book-consultation.html';
+                });
+            }
+        });
+    </script>
 </body>
 </html>
