--- a/referral.html
+++ b/referral.html
@@ -27,7 +27,9 @@
     <link rel="stylesheet" href="css/referral-form-design.css">
     <link rel="stylesheet" href="css/referral-select-ui.css">
     <link rel="stylesheet" href="css/referral-links-perfect-ui.css">
-    <link rel="stylesheet" href="css/referral-consolidated.css">
+    <link rel="stylesheet" href="css/referral-consolidated.css?v=2.0">
+    <!-- PC画面レイアウト修正（最後に読み込んで確実に適用） -->
+    <link rel="stylesheet" href="css/referral-pc-layout-fix.css?v=1.0">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
