紹介ページCSS競合と重複を完全解消
- 7つのCSSファイルを1つのreferral-unified.cssに統合
- share-button、link-item、main-contentの重複定義を解消
- z-index管理を統一（サイドバー:100、モーダル:10000）
- メディアクエリの重複を整理
- PC画面の余白問題も同時に解決

--- a/referral.html
+++ b/referral.html
@@ -21,15 +21,8 @@
     <link rel="stylesheet" href="css/notifications.css">
     <link rel="stylesheet" href="css/realtime-notifications.css">
     <link rel="stylesheet" href="css/responsive-menu.css">
-    <!-- 紹介ページ専用スタイル（整理済み） -->
-    <link rel="stylesheet" href="css/referral-page-specific.css">
-    <link rel="stylesheet" href="css/referral-sidebar-complete-fix.css">
-    <link rel="stylesheet" href="css/referral-form-design.css">
-    <link rel="stylesheet" href="css/referral-select-ui.css">
-    <link rel="stylesheet" href="css/referral-links-perfect-ui.css">
-    <link rel="stylesheet" href="css/referral-consolidated.css?v=2.0">
-    <!-- PC画面レイアウト修正（最後に読み込んで確実に適用） -->
-    <link rel="stylesheet" href="css/referral-pc-layout-fix.css?v=1.0">
+    <!-- 紹介ページ統一CSS（全ての紹介ページスタイルを統合） -->
+    <link rel="stylesheet" href="css/referral-unified.css?v=1.0">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
