コンソールエラー修正: referralsテーブル→v_referral_historyビュー、supabase→supabaseClient
- referral-unified.js: v_referral_historyビューを使用、inviter_idカラムに変更
- dashboard.js: window.supabaseClientチェックに修正
- google-calendar-booking.js: window.supabaseClient使用に修正
- event-modal.js: window.supabaseClient使用に修正
- supabase-wait-fix.js: 互換性レイヤーを追加
- dashboard.html: supabase-wait-fix.jsを早期読み込み

--- a/dashboard.html
+++ b/dashboard.html
@@ -427,6 +427,8 @@
     <!-- Scripts -->
     <!-- Core initialization (must be first) -->
     <script src="js/interconnect-core.js"></script>
+    <!-- Supabase参照修正 (他のスクリプトより先に読み込む) -->
+    <script src="js/supabase-wait-fix.js"></script>
     <!-- ゲストモード管理 -->
     <script src="js/guest-mode-manager.js"></script>
     
