Supabase読み込み順序の根本的修正とエラー解消
- dashboard.html, matching.html, referral.html, events.htmlでsupabase-unified.jsを最初に読み込むように修正
- dashboard.jsのsupabase参照エラーを修正（waitForSupabaseを使用）
- supabase-wait-fix.jsにwaitForSupabaseフォールバック実装を追加
- すべてのスクリプトより前にSupabaseを初期化することでエラーを防止

--- a/dashboard.html
+++ b/dashboard.html
@@ -425,10 +425,12 @@
     </div>
     
     <!-- Scripts -->
-    <!-- Core initialization (must be first) -->
-    <script src="js/interconnect-core.js"></script>
-    <!-- Supabase参照修正 (他のスクリプトより先に読み込む) -->
+    <!-- Supabase統一初期化（最初に読み込む） -->
+    <script src="js/supabase-unified.js?v=1.0"></script>
+    <!-- Supabase参照修正 -->
     <script src="js/supabase-wait-fix.js"></script>
+    <!-- Core initialization -->
+    <script src="js/interconnect-core.js"></script>
     <!-- ゲストモード管理 -->
     <script src="js/guest-mode-manager.js"></script>
     
