ログアウトボタンのUI修正
- sidebar-footer内のログアウトボタン専用スタイルを作成
- ボタンのボーダー、パディング、ホバー効果を適切に設定
- 全ての主要ページにlogout-button-fix.cssを適用
- サイドバー全体のflex構造を確保してフッターを下部に固定

--- a/matching.html
+++ b/matching.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/dashboard.css">
+    <!-- ログアウトボタンUI修正 -->
+    <link rel="stylesheet" href="css/logout-button-fix.css">
     <link rel="stylesheet" href="css/notifications.css">
     <!-- マッチングシステム統一CSS -->
     <link rel="stylesheet" href="css/matching-unified.css?v=1.0">
