--- a/members.html
+++ b/members.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/dashboard.css">
+    <!-- ログアウトボタンUI修正 -->
+    <link rel="stylesheet" href="css/logout-button-fix.css">
     <link rel="stylesheet" href="css/members.css">
     <link rel="stylesheet" href="css/member-profile-preview.css">
     <link rel="stylesheet" href="css/members-profile-modal.css">
