--- a/messages.html
+++ b/messages.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/dashboard.css">
+    <!-- ログアウトボタンUI修正 -->
+    <link rel="stylesheet" href="css/logout-button-fix.css">
     <link rel="stylesheet" href="css/messages.css">
     <link rel="stylesheet" href="css/notifications.css">
     <link rel="stylesheet" href="css/realtime-notifications.css">
