--- a/events.html
+++ b/events.html
@@ -425,6 +425,12 @@
     </div>
     
     <!-- Scripts -->
+    <!-- Service Workerログフィルター（最初に読み込む） -->
+    <script src="js/service-worker-filter.js"></script>
+    <!-- コンソール履歴管理 -->
+    <script src="js/console-history-logger.js"></script>
+    <!-- 関数実行トラッカー -->
+    <script src="js/function-execution-tracker.js"></script>
     <!-- Supabase統一初期化（最初に読み込む） -->
     <script src="js/supabase-unified.js?v=1.0"></script>
     <!-- Supabase参照修正 -->
