--- a/matching.html
+++ b/matching.html
@@ -405,6 +405,8 @@
     <!-- Scripts -->
     <!-- Service Workerログフィルター（最初に読み込む） -->
     <script src="js/service-worker-filter.js"></script>
+    <!-- Users テーブルデバッグ（Supabase初期化前に読み込む） -->
+    <script src="js/debug-users-table-enhanced.js"></script>
     <!-- コンソール履歴管理 -->
     <script src="js/console-history-logger.js"></script>
     <!-- 関数実行トラッカー -->
