--- a/referral.html
+++ b/referral.html
@@ -459,6 +459,8 @@ AIを活用した次世代のビジネスマッチングサービスで、経営
     <!-- Scripts -->
     <!-- Service Workerログフィルター（最初に読み込む） -->
     <script src="js/service-worker-filter.js"></script>
+    <!-- 紹介ページデバッグ -->
+    <script src="js/referral-debug-network.js"></script>
     <!-- コンソール履歴管理 -->
     <script src="js/console-history-logger.js"></script>
     <!-- 関数実行トラッカー -->
