マッチングページの競合解消と初期化修正
- dashboard.jsをmatching.htmlから削除（紹介ポイント読み込みエラー解消）
- matching-unified.jsの初期化をSupabaseReady後に実行するよう修正
- dashboard.jsのSupabase参照をnullチェック付きに修正
- CSSバージョンを3.0に統一
- 重複実行や競合コードを排除

--- a/matching.html
+++ b/matching.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/logout-button-fix.css">
     <link rel="stylesheet" href="css/notifications.css">
     <!-- マッチングシステム統一CSS -->
-    <link rel="stylesheet" href="css/matching-unified.css?v=2.0">
+    <link rel="stylesheet" href="css/matching-unified.css?v=3.0">
     <link rel="stylesheet" href="css/responsive-menu.css">
     <link rel="stylesheet" href="css/user-menu-zindex-only.css">
     <!-- ユーザードロップダウン最前面修正 -->
@@ -421,7 +421,8 @@
     <script src="js/global-functions.js"></script>
     <script src="js/profile-sync.js"></script>
     <script src="js/responsive-menu-simple.js"></script>
-    <script src="js/dashboard.js"></script>
+    <!-- dashboard.jsはマッチングページには不要 -->
+    <!-- <script src="js/dashboard.js"></script> -->
     
     <!-- マッチングシステム統合JavaScript（47ファイルを1つに統合） -->
     <script src="js/matching-unified.js?v=3.0"></script>
