feat: コネクト機能実装と登録ページUI修正
- connectionsテーブルを使用したコネクト申請機能を実装
- マッチングページでコネクションステータス（申請中/承認済み）を表示
- コネクト申請時の通知機能を追加
- 登録ページの招待リンク対応UI修正
  - 文字カウントの動的な色変更（赤→緑）
  - フォームバリデーションとボタンの自動有効/無効化
  - 招待コード表示バーの追加
  - レスポンシブ対応の強化
  - ファイルアップロードのプレビュー機能

--- a/register.html
+++ b/register.html
@@ -23,6 +23,10 @@
     <link rel="stylesheet" href="css/register-sns-removal.css">
     <!-- CSS競合修正 -->
     <link rel="stylesheet" href="css/css-conflict-fix.css">
+    <!-- 登録ページUI修正（招待リンク対応） -->
+    <link rel="stylesheet" href="css/register-ui-fix.css">
+    <!-- レスポンシブ対応 -->
+    <link rel="stylesheet" href="css/register-responsive.css">
 </head>
 <body>
     <div class="auth-container">
@@ -675,5 +679,7 @@
     <!-- 招待コード対応の登録処理 -->
     <script src="js/register-with-invite.js"></script>
     <script src="js/supabase-unified.js?v=1.0"></script>
+    <!-- 文字カウントとバリデーション -->
+    <script src="js/register-char-count.js"></script>
 </body>
 </html>
