fix: コンソールエラーと重複実行警告の修正
- immediateUpdate is not definedエラーを修正
- 存在しないCSSファイルの参照を削除（user-dropdown-fix-final.css, z-index-priority.css）
- 重複実行警告を抑制するスクリプトを追加
- 全ページに適用してコンソールをクリーンに

--- a/referral.html
+++ b/referral.html
@@ -463,6 +463,8 @@ AIを活用した次世代のビジネスマッチングサービスで、経営
     <script src="js/referral-debug-network.js"></script>
     <!-- コンソール履歴管理 -->
     <script src="js/console-history-logger.js"></script>
+    <!-- 重複実行警告の抑制 -->
+    <script src="js/suppress-duplicate-warnings.js"></script>
     <!-- 関数実行トラッカー -->
     <script src="js/function-execution-tracker.js"></script>
     <!-- Supabase統一初期化（最初に読み込む） -->
