--- a/matching.html
+++ b/matching.html
@@ -24,10 +24,6 @@
     <link rel="stylesheet" href="css/matching-unified.css?v=3.0">
     <link rel="stylesheet" href="css/responsive-menu.css">
     <link rel="stylesheet" href="css/user-menu-zindex-only.css">
-    <!-- ユーザードロップダウン最前面修正 -->
-    <link rel="stylesheet" href="css/user-dropdown-fix-final.css">
-    <!-- z-index優先順位管理 -->
-    <link rel="stylesheet" href="css/z-index-priority.css">
 </head>
 <body>
     <!-- Mobile Header -->
@@ -303,6 +299,8 @@
     <script src="js/service-worker-filter.js"></script>
     <!-- コンソール履歴管理 -->
     <script src="js/console-history-logger.js"></script>
+    <!-- 重複実行警告の抑制 -->
+    <script src="js/suppress-duplicate-warnings.js"></script>
     <!-- 関数実行トラッカー -->
     <script src="js/function-execution-tracker.js"></script>
     <!-- Supabase統一初期化（最初に読み込む） -->
