--- a/register.html
+++ b/register.html
@@ -659,18 +659,20 @@
     <!-- Supabase -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/register-referral-handler.js"></script>
+    <!-- ログイン状態チェック（最初に実行） -->
+    <script src="js/register-auth-check.js"></script>
     
     <script src="js/error-prevention.js"></script>
     <script src="js/null-check-fixes.js"></script>
     <script src="js/safe-dom-utils.js"></script>
     <script src="js/safe-storage.js"></script>
     <script src="js/auth.js"></script>
-    <script src="js/auth-toggle.js"></script>
+    <!-- auth-toggle.js は存在しないため削除 -->
     <script src="js/global-functions.js"></script>
     <script src="js/registration-flow.js"></script>
     <script src="js/register-functions-fix.js"></script>
     <script src="js/register-nextstep-final-fix.js"></script>
-    <script src="js/line-integration.js"></script>
+    <!-- line-integration.js は存在しないため削除 -->
     <script src="js/register-button-fix-complete.js"></script>
     <!-- 強化されたバリデーション -->
     <script src="js/register-enhanced-validation.js"></script>
